[project]
name = "causal_copilot_planner"
version = "0.1.0"
description = "causal_copilot_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
causal_copilot_planner = "causal_copilot_planner.main:run"
run_crew = "causal_copilot_planner.main:run"
train = "causal_copilot_planner.main:train"
replay = "causal_copilot_planner.main:replay"
test = "causal_copilot_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
